--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@awesome.me/kit-71a75a877b": "^1.0.16",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/pro-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@nuxtjs/google-fonts": "^3.2.0",
+    "@vueuse/core": "^11.0.0",
+    "@vueuse/nuxt": "^11.0.0",
     "nuxt": "^3.12.4",
+    "sass": "^1.77.8",
     "vue": "latest"
   }
 }
